_old-projects/kubernetes/arrstack/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`radarr.minikube.m1xxos.tech`)
    kind: Rule
    services:
    - name: radarr
      port: 7878
      sticky:
        cookie: {}
  - match: Host(`radarr.minikube.m1xxos.tech`) && PathPrefix(`/metrics`)
    kind: Rule
    services:
    - name: radarr
      port: 9708
      sticky:
        cookie: {}
